2007-09-17  Albert Chu <chu11@llnl.gov>

	* bmc-config/, pef-config/: Re-arch section comments again.  Add
	serial section comments.

	* pef-config/: Support keypairs.
	
	* bmc-config/, pef-config/: General code cleanup to make code more
	similar to between tools for later code merging.

	* bmc-config/bmc-config.8.pre.in, pef-config/pef-config.8.pre.in:
	Add note that commit keypairs will overwrite file keypairs.
	
2007-09-15  Albert Chu <chu11@llnl.gov>

	* NEWS: Update.
	
2007-09-11  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/, common/src/, ipmiconsole/: Support new ignore SOL
	port workaround.
	
2007-09-11  Albert Chu <chu11@llnl.gov>

	* common/src/format-text.h, common/src/format-text.c, bmc-config/:
	Re-do text formatting for section comments.

	* freeipmi.spec.in: Add texinfo buildrequires.
	
2007-09-07  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/ipmiconsole.8.pre.in: Fix text.

	* common/src/format-text.h, common/src/format-text.c: New files.

	* bmc-config/: Begin supporting comments in the checkout.  Update
	bmc-config manpage.

2007-09-06  Albert Chu <chu11@llnl.gov>

	* bmc-config/src/bmc-config-sections.h,
	pef-config/src/pef-config-sections.h: Add section_name parameter
	to comment callback.

	* ipmi-sensors, ipmi-sel, ipmi-fru: Fix seg-fault possibility
	corner case.

	* ipmipower/: Remove debug statement.  Output debug command in
	prompt menus.

	* common/src/cmdline-parse-common.h (parse_authentication_type):
	Fix parsing bug.
	
2007-09-05  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/: Move behavior_flags into
	engine_config.

	* bmc-config/src/bmc-config-commit.c (bmc_commit_file): Output
	invalid commit error message by default, not in verbose mode.

	* bmc-config/, configure.ac, freeipmi.spec.in: Remove
	bmc-autoconfig.

	* Update FSF address throughout.  Make address consistent
	throughout for easier search/replace later.

	* Various manpage and documentation updates.
