@@ -34,7 +34,7 @@ See GENERAL USE below for a description on how most will want to use
 \fB\-o\fR, \fB\-\-checkout\fR
 Fetch configuration information from the BMC.
 .TP
-\fB\-i\fR, \fB\-\-commit\fR
+\fB\-c\fR, \fB\-\-commit\fR
 Update configuration information to the BMC from a config file or key pairs.
 .TP
 \fB\-d\fR, \fB\-\-diff\fR
